fix column and alignment issue for background page

--- a/css/styles.css
+++ b/css/styles.css
@@ -14,11 +14,10 @@ text-decoration: underline;
 
 .main-body {
   margin-top: 50px;
-  margin-left: 165px;
   border: 5px;
   text-align: justify;
 }
 
 .page-title {
-  text-align: left;
+  text-align: center;
 }
